objects/QGMB__userDefinedQuery__c.object
<CustomObject>
    <description>Saves a catalog of user defined Saved queries that can be Loaded, Saves As, Deleted, Renamed</description>
    <fields>
        <fullName>QGMB__Base_Object_Label__c</fullName>
        <label>Base Object Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QGMB__Base_Object__c</fullName>
        <description>The main Object the Query is based on. Creates a sort of a hierarchy</description>
        <label>Base Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QGMB__Description__c</fullName>
        <description>User define optional description</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QGMB__Grid_Def__c</fullName>
        <description>colModel and other jqGrid definitions, similar to the object QueryGuru_Definitions__c</description>
        <label>Grid Def</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QGMB__Parent_Object__c</fullName>
        <label>Parent Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QGMB__Public__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Can be seen and Read Only by everyone, not just owner</description>
        <label>Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QGMB__Query_Definition__c</fullName>
        <description>a JSON encoded to text defining th efull query</description>
        <label>Query Definition</label>
        <length>65536</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QGMB__Query_Name__c</fullName>
        <label>Query Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>userDefinedQuery</label>
    <listViews>
        <fullName>QGMB__All</fullName>
        <columns>NAME</columns>
        <columns>QGMB__Base_Object__c</columns>
        <columns>QGMB__Description__c</columns>
        <columns>QGMB__Parent_Object__c</columns>
        <columns>QGMB__Public__c</columns>
        <columns>QGMB__Query_Name__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>QGMB__Query_Definition__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UDQ-{0000000}</displayFormat>
        <label>queryCatalogue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>userDefinedQueries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>